--- a/dividend-champions-gap-theory/Dividend_Champions_Gap_Theory.html
+++ b/dividend-champions-gap-theory/Dividend_Champions_Gap_Theory.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Chad J" />
 
-<meta name="date" content="2025-03-01" />
+<meta name="date" content="2025-03-03" />
 
 <title>Dividend Champions Gap Theory</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">Dividend Champions Gap Theory</h1>
 <h4 class="author">Chad J</h4>
-<h4 class="date">2025-03-01</h4>
+<h4 class="date">2025-03-03</h4>
 
 </div>
 
@@ -420,6 +420,15 @@ using quantmod and, therefore, were removed from the list:
 observations. This study strictly looked at dividend and price data
 pulled from Yahoo Finance.</li>
 </ul>
+</div>
+<div id="gathering-and-prepping-data" class="section level1">
+<h1>Gathering and Prepping Data</h1>
+<p>To narrow down what stock we want, the strategy being tested is the
+assumption that you could buy the stock on the day before the dividend
+increase and sell it either on the increase day or the day after the
+increase. Therefore, we will be looking at the following price
+comparisons: * Before Open to During Close * Before Open to After Close
+* Before Open to During High * Before Open to After High</p>
 </div>
 
 
